--- a/TalentArc-Backend/package.json
+++ b/TalentArc-Backend/package.json
@@ -5,7 +5,7 @@
   "author": "Scott Moss <willscottmoss@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node -r esm src/index.js",
+    "start": "nodemon -r esm src/index.js",
     "init": "node -r esm scripts/Initialization.Script.js",
     "dev": "nodemon src/index.js --ignore 'src/db/db.json'",
     "test": "jest tests"
@@ -17,15 +17,25 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.14",
     "apollo-server": "^2.25.3",
     "apollo-server-cloud-functions": "^3.6.1",
+    "apollo-server-core": "^3.8.2",
+    "apollo-server-express": "^3.8.2",
     "date-fns": "^2.5.0",
     "esm": "^3.2.25",
+    "express": "^4.18.1",
     "graphql": "^15.8.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.6",
+    "graphql-tools": "^8.2.12",
+    "graphql-ws": "^5.9.0",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mongoose": "^6.3.4",
+    "password-hash": "^1.2.2",
     "pg": "^8.7.3",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "ws": "^8.8.0"
   }
 }
